changed size of nav.active to 400px to prevent overflow of the button

--- a/animated-navigation/style.css
+++ b/animated-navigation/style.css
@@ -35,7 +35,7 @@ nav {
 }
 
 nav.active {
-  width: 350px;
+  width: 400px;
 }
 
 nav ul {
